--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/font": "7.4.47",
     "@supabase/supabase-js": "^2.57.2",
     "axios": "^1.11.0",
+    "groq-sdk": "^0.37.0",
     "pinia": "^3.0.3",
     "vite-plugin-vue-devtools": "^8.0.1",
     "vue": "^3.5.17",
